Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28091

Crash when editing C++

    XMLWordPrintable

Details

    • 09f0ddb50c (qt-creator/qt-creator/master) 09f0ddb50c (qt-creator/qt-creator/qds-dev) 09f0ddb50c (qt-creator/qt-creator/9.0)

    Description

      I think I was deleting lines (TextEditor > DeleteLine) when it crashed.

      The symbol member is null at /Users/mitch/dev/qt-creator/src/plugins/cppeditor/cppoverviewmodel.cpp:129:

      1  CPlusPlus::Icons::iconTypeForSymbol(CPlusPlus::Symbol const *)                                                                                                                                                                                                                                    Icons.cpp                                                                                                           54   0x10f932bc8 
      2  CPlusPlus::Icons::iconForSymbol(CPlusPlus::Symbol const *)                                                                                                                                                                                                                                        Icons.cpp                                                                                                           38   0x10f932b90 
      3  CppEditor::Internal::SymbolItem::data(int, int) const                                                                                                                                                                                                                                             cppoverviewmodel.cpp                                                                                                129  0x137b57c5c 
      4  Utils::BaseTreeModel::data(QModelIndex const&, int) const                                                                                                                                                                                                                                         treemodel.cpp                                                                                                       1017 0x101f9286c 
      5  QSortFilterProxyModel::data(QModelIndex const&, int) const                                                                                                                                                                                                                                        qsortfilterproxymodel.cpp                                                                                           2286 0x103d77ab8 
      6  QAbstractItemModel::multiData(QModelIndex const&, QModelRoleDataSpan) const                                                                                                                                                                                                                       qabstractitemmodel.cpp                                                                                              3704 0x103b67488 
      7  QModelIndex::multiData(QModelRoleDataSpan) const                                                                                                                                                                                                                                                  qabstractitemmodel.h                                                                                                532  0x101595d24 
      8  QStyledItemDelegate::initStyleOption(QStyleOptionViewItem *, QModelIndex const&) const                                                                                                                                                                                                            qstyleditemdelegate.cpp                                                                                             294  0x101595d04 
      9  QStyledItemDelegate::sizeHint(QStyleOptionViewItem const&, QModelIndex const&) const                                                                                                                                                                                                              qstyleditemdelegate.cpp                                                                                             426  0x10159670c 
      10 Utils::NavigationTreeView::scrollTo(QModelIndex const&, QAbstractItemView::ScrollHint)                                                                                                                                                                                                            navigationtreeview.cpp                                                                                              73   0x101ea1274 
      11 CppEditor::Internal::CppOutlineWidget::updateSelectionInTree(QModelIndex const&)                                                                                                                                                                                                                  cppoutline.cpp                                                                                                      176  0x137b51c98 
      12 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QModelIndex const&>, void, void (CppEditor::Internal::CppOutlineWidget:: *)(QModelIndex const&)>::call(void (CppEditor::Internal::CppOutlineWidget:: *)(QModelIndex const&), CppEditor::Internal::CppOutlineWidget *, void * *) qobjectdefs_impl.h                                                                                                  152  0x137b533fc 
      13 void QtPrivate::FunctionPointer<void (CppEditor::Internal::CppOutlineWidget:: *)(QModelIndex const&)>::call<QtPrivate::List<QModelIndex const&>, void>(void (CppEditor::Internal::CppOutlineWidget:: *)(QModelIndex const&), CppEditor::Internal::CppOutlineWidget *, void * *)                   qobjectdefs_impl.h                                                                                                  185  0x137b5333c 
      14 QtPrivate::QSlotObject<void (CppEditor::Internal::CppOutlineWidget:: *)(QModelIndex const&), QtPrivate::List<QModelIndex const&>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                                                     qobjectdefs_impl.h                                                                                                  395  0x137b53240 
      15 QtPrivate::QSlotObjectBase::call(QObject *, void * *)                                                                                                                                                                                                                                             qobjectdefs_impl.h                                                                                                  375  0x103bd2d40 
      16 void doActivate<false>(QObject *, int, void * *)                                                                                                                                                                                                                                                  qobject.cpp                                                                                                         3912 0x103bd2d24 
      17 CppEditor::Internal::CppEditorOutline::modelIndexChanged(QModelIndex const&)                                                                                                                                                                                                                      moc_cppeditoroutline.cpp                                                                                            146  0x137836950 
      18 CppEditor::Internal::CppEditorOutline::modelIndex()                                                                                                                                                                                                                                               cppeditoroutline.cpp                                                                                                149  0x1379ed9e4 
      19 CppEditor::Internal::CppEditorOutline::updateIndexNow()                                                                                                                                                                                                                                           cppeditoroutline.cpp                                                                                                188  0x1379ed84c 
      20 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (CppEditor::Internal::CppEditorOutline:: *)()>::call(void (CppEditor::Internal::CppEditorOutline:: *)(), CppEditor::Internal::CppEditorOutline *, void * *)                                                        qobjectdefs_impl.h                                                                                                  152  0x1379eed58 
      21 void QtPrivate::FunctionPointer<void (CppEditor::Internal::CppEditorOutline:: *)()>::call<QtPrivate::List<>, void>(void (CppEditor::Internal::CppEditorOutline:: *)(), CppEditor::Internal::CppEditorOutline *, void * *)                                                                         qobjectdefs_impl.h                                                                                                  185  0x1379eeca0 
      22 QtPrivate::QSlotObject<void (CppEditor::Internal::CppEditorOutline:: *)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                                                                                         qobjectdefs_impl.h                                                                                                  395  0x1379eeba4 
      23 QtPrivate::QSlotObjectBase::call(QObject *, void * *)                                                                                                                                                                                                                                             qobjectdefs_impl.h                                                                                                  375  0x103bd2d40 
      24 void doActivate<false>(QObject *, int, void * *)                                                                                                                                                                                                                                                  qobject.cpp                                                                                                         3912 0x103bd2d24 
      25 QTimer::timeout(QTimer::QPrivateSignal)                                                                                                                                                                                                                                                           moc_qtimer.cpp                                                                                                      210  0x103be59f4 
      26 QTimer::timerEvent(QTimerEvent *)                                                                                                                                                                                                                                                                 qtimer.cpp                                                                                                          295  0x103be59d8 
      27 QObject::event(QEvent *)                                                                                                                                                                                                                                                                          qobject.cpp                                                                                                              0x103bcad88 
      28 QApplicationPrivate::notify_helper(QObject *, QEvent *)                                                                                                                                                                                                                                           qapplication.cpp                                                                                                    3409 0x101300a58 
      29 QApplication::notify(QObject *, QEvent *)                                                                                                                                                                                                                                                         qapplication.cpp                                                                                                         0x101301c8c 
      30 QCoreApplication::notifyInternal2(QObject *, QEvent *)                                                                                                                                                                                                                                            qcoreapplication.cpp                                                                                                1067 0x103b8ab80 
      31 QTimerInfoList::activateTimers()                                                                                                                                                                                                                                                                  qtimerinfo_unix.cpp                                                                                                 646  0x103ce6cd0 
      32 QCocoaEventDispatcherPrivate::processTimers()                                                                                                                                                                                                                                                     qcocoaeventdispatcher.mm                                                                                            131  0x1012143a0 
      33 QCocoaEventDispatcherPrivate::activateTimersSourceCallback(void *)                                                                                                                                                                                                                                qcocoaeventdispatcher.mm                                                                                            125  0x101214398 
      34 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__                                                                                                                                                                                                                                        (arm64e) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation                                   0x19b3f5034 
      35 __CFRunLoopDoSource0                                                                                                                                                                                                                                                                              (arm64e) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation                                   0x19b3f4f80 
      36 __CFRunLoopDoSources0                                                                                                                                                                                                                                                                             (arm64e) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation                                   0x19b3f4c80 
      37 __CFRunLoopRun                                                                                                                                                                                                                                                                                    (arm64e) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation                                   0x19b3f3600 
      38 CFRunLoopRunSpecific                                                                                                                                                                                                                                                                              (arm64e) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation                                   0x19b3f2b24 
      39 RunCurrentEventLoopInMode                                                                                                                                                                                                                                                                         (arm64e) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox      0x1a402b338 
      40 ReceiveNextEventCommon                                                                                                                                                                                                                                                                            (arm64e) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox      0x1a402b0b4 
      41 _BlockUntilNextEventMatchingListInModeWithFilter                                                                                                                                                                                                                                                  (arm64e) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox      0x1a402ae68 
      42 _DPSNextEvent                                                                                                                                                                                                                                                                                     (arm64e) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit                                                   0x19df5978c 
      43 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:]                                                                                                                                                                                                                   (arm64e) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit                                                   0x19df58084 
      44 -[NSApplication run]                                                                                                                                                                                                                                                                              (arm64e) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit                                                   0x19df4a250 
      45 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)                                                                                                                                                                                                                       qcocoaeventdispatcher.mm                                                                                            430  0x101214d34 
      46 QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)                                                                                                                                                                                                                                  qeventloop.cpp                                                                                                      139  0x103b93ee8 
      47 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)                                                                                                                                                                                                                                           qeventloop.cpp                                                                                                      230  0x103b93ec4 
      48 QCoreApplication::exec()                                                                                                                                                                                                                                                                          qcoreapplication.cpp                                                                                                1382 0x103b8b25c 
      49 main                                                                                                                                                                                                                                                                                              main.cpp                                                                                                            756  0x10000d6fc 
      50 start                                                                                                                                                                                                                                                                                             (arm64e) /usr/lib/dyld                                                                                                   0x10009908c 
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes