CppEditor: fix crash in outline

Make sure the document lives as long as the generated symbol items.

Fixes: QTCREATORBUG-28091
Change-Id: I515748ab7fd198699434ac5c19585afa20df613d
Reviewed-by: Eike Ziller <eike.ziller@qt.io>